# connector-aws

./: README.md  pyproject.toml
.github/workflows/: tests.yml
src/connector_aws/commands/: addDynamoItem.py  scanDynamoTable.py
tests/connector_aws/unit/: test_dynamodb.py  test_s3.py
